# omni

./: .envrc  .gitignore  .mcp.json  .npmrc  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  DOCKER_DETECTION_IMPROVEMENTS.md  HUGEICONS-TEST-SUITE-SUMMARY.md  LICENSE  MERIDIAN_TOOL_ANALYSIS.md  README.md  REDIS_TEST_SETUP.md  TITAN-NETRON-AUDIT.md  bun.lockb  dependency-analysis.js  docker-compose.test.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
meridian/: .dockerignore  .gitignore  .mcp.json  BACKUP_IMPLEMENTATION_SUMMARY.md  BACKUP_QUICK_REFERENCE.md  BACKUP_SYSTEM.md  BUGFIX_SPECS_PATH.md  CODE_TOOLS_ENHANCEMENT_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  CONTEXT_MANAGER_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_CODE_TOOLS_SPEC.md  FINAL_COMPLETION_REPORT.md  FINAL_PRODUCTION_REPORT.md  FINAL_REPORT.md  FINAL_VERIFICATION.md  HTTP_TRANSPORT_IMPL.md  IMPLEMENTATION_GAPS_ANALYSIS.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SESSION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MACOS_FIX_SUMMARY.md  MCP_CODE_TOOLS_ANALYSIS.json  MCP_OPTIMIZATION_SUMMARY.md  MCP_SETUP.md  MCP_SPECS_TOOLS_TEST_PLAN.md  MCP_TOOLS_AUDIT_REPORT.md  MCP_TOOLS_EFFICIENCY_ANALYSIS.md  MERIDIAN_IMPROVEMENTS_REPORT.md  METRICS_DATABASE_DESIGN.md  METRICS_DATABASE_IMPLEMENTATION.md  MIGRATION_SYSTEM.md  NEXT_STEPS.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_IMPLEMENTATION_REPORT.md  PHASE_1_IMPLEMENTATION_REPORT.md  PHASE_1_NOTES.md  (+36 more)
meridian/.claude/: mcp_config.json
meridian/analysis/: SUMMARY.md  mcp-tools-analysis.md
meridian/benches/: episodic_memory_bench.rs  hnsw_bench.rs  hnsw_similarity_bench.rs  indexing.rs  ml_inference.rs  reranking_bench.rs  rpc_bench.rs
meridian/docs/: ARCHITECTURE_ANALYSIS.md  COGNITIVE_MEMORY_SYSTEM.md  GLOBAL_CONFIG_ARCHITECTURE.md  GRAPH_ANALYSIS_IMPLEMENTATION.md  HNSW_IMPLEMENTATION_SUMMARY.md  PROGRESS_SYSTEM_DESIGN.md  SURREALDB_COGNITIVE_ARCHITECTURE.md  SURREALDB_IMPLEMENTATION_COMPLETE.md  phase1-implementation-report.md  progress-benchmarks.md  progress-guide.md  progress-quick-reference.md  storage-macos-fix.md
meridian/examples/: analyze_all_metrics.rs  backup_cli.rs  backup_integration.rs  check_db.rs  collect_baseline_metrics.rs  demo_git_on_repo.rs  graph_analysis_example.rs  hnsw_speedup_demo.rs  ml_demo.rs  multi_level_cache_demo.rs  read_metrics.rs  surrealdb_example.rs  test_git_history.rs
meridian/specs/: CHANGELOG.md  COMPLETION_SUMMARY.md  INDEX.md  MCP_CLAUDE_CODE_SETUP.md  MCP_TOOLS_SPEC_MANAGEMENT.md  (+22 more)
(+1583 files in other folders)
