[package]
name = "meridian"
version = "0.1.0"
edition = "2021"
authors = ["Meridian Contributors"]
description = "Cognitive memory system for LLM codebase interaction"
license = "MIT"
repository = "https://github.com/omnitron-dev/meridian"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"

# Storage
rocksdb = "0.24.0"

# Code parsing
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"

# Search and indexing
tantivy = "0.25.0"

# ML/Embeddings
candle-core = "0.9.1"
candle-nn = "0.9.1"
fastembed = "5.2.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Async traits
async-trait = "0.1.89"

# Logging
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# MCP SDK - TODO: Add when published or fix the package name
# Note: The official MCP Rust SDK is in development
# For now, we'll implement a minimal MCP server directly
# mcp-rust-sdk = { git = "https://github.com/modelcontextprotocol/rust-sdk.git" }

# Configuration
toml = "0.9.8"

# Git integration
git2 = "0.20.2"

# CLI
clap = { version = "4.5.49", features = ["derive"] }

# HTTP server (axum)
axum = { version = "0.8.6", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# HTTP client (reqwest)
reqwest = { version = "0.12.13", features = ["json"] }

# Data structures
dashmap = "6.1.0"
parking_lot = "0.12.5"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# UUID
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Hashing
blake3 = "1.8.2"

# Compression
lz4 = "1.28.1"

# Regex
regex = "1.11.1"

# Markdown parsing
pulldown-cmark = "0.13.0"

# System information
sysinfo = "0.37.2"

# Process management
dirs = "6.0.0"
daemonize = "0.5.0"
nix = { version = "0.30.1", features = ["signal", "process"] }

# File watching
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.7.0"

[[bench]]
name = "indexing"
harness = false

[[bin]]
name = "meridian"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
